# zucchini

./: .gitignore  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  lc3grade.config  lc3grade.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  stuff.py  tox.ini  travis_pypi_setup.py  zucc.config  zucc.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
docs/: .gitignore  Config-Files.rst  Directory-Structure.rst  Docker-Wrapper-Grader.rst  Example-Zucchini-Workflow.rst  Exporter-Interface.rst  Grader-Interface.rst  Grading-Manager.rst  Home.rst  LC3-Grader.rst  Loader-Interface.rst  Makefile  Tap-Manager.rst  Zucchini-CLI.rst  conf.py  config-files.rst  example-workflow.rst  index.rst  installation.rst  make.bat  usage.rst
docs/architecture/: Directory-Structure.rst  farm-manager.rst  index.rst  overview.rst  zucchini-cli.rst
docs/config-samples/: index.rst  malloc.rst  photo-and-xor.rst  two-assembly-tests.rst
src/zucchini/: __init__.py  assignment.py  cli.py  constants.py  grades.py  gradescope.py  gradescope_model.py  gradescope_output_model.py  local_grading.py  model.py  submission.py  utils.py  zucchini.py
student_tests/: Makefile  math_suite.c  math_suite.h  my_math.c  my_math.h  tests  tests.c
tests/: Makefile  __init__.py  grader_test.py  math_suite.c  math_suite.h  my_math.c  my_math.h  test_zucchini.py  tests.c
zucchini/: __init__.py  __main__.py  amazon.py  assignment.py  backend.py  canvas.py  cli.py  constants.py  farms.py  filter.py  flatten.py  grader.py  grades.py  gradescope.py  grading.py  grading_manager.py  local_grading.py  submission.py  utils.py  zucchini.py
zucchini/backends/: c.py  lc3.py
zucchini/exporters/: exporter_interface.py
zucchini/graders/: __init__.py  bitwise_json_grader.py  circuitsim_grader.py  command_grader.py  criterion_grader.py  ensemble_grader.py  grader_interface.py  junit_grader.py  junit_json_grader.py  junit_xml_grader.py  lc3tools_grader.py  lc3tools_legacy_grader.py  libcheck_grader.py  multi_command_grader.py  open_file_grader.py  prompt_grader.py  pylc3_grader.py  python_module_grader.py  threaded_grader.py
zucchini/loaders/: __init__.py  canvas_archive_loader.py  gradescope_loader.py
(+45 files in other folders)
