[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[project]
name = "zucchini"
version = "3.0.0"
authors=[
    {name = "Zucchini Team", email = "team@zucc.io"}
]
description = "Zucchini is an automatic grader tool for use in grading programming assignments."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.4.0",
    "cyclopts>=4.5.1",
    "pydantic>=2.12.5",
    "ruamel-yaml>=0.19.1",
    "tomli>=2.4.0",
    "typing-extensions>=4.15.0",
]
keywords = ["zucchini", "autograder", "gradescope"]
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.optional-dependencies]
dev = []

[project.scripts]
zucc = "zucchini.cli:app"

[project.urls]
Repository = "https://github.com/zucchini/zucchini"
Documentation = "https://zucchini.readthedocs.io"
